# scoring

./: Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
scoring/: api.py
scoring/service/: scoring.py
scoring_db/instances.enabled/scoring_db/: config.yaml  scoring.lua
tests/: func_tests.py  test.py  test_api.py
