[tool.poetry]
name = "scoring"
version = "0.1.0"
description = "Scoring Project"
authors = ["Nikita"]
readme = "README.md"
packages = [{ include = "scoring" }]

[tool.poetry.dependencies]
python = "^3.12"
tarantool = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
mypy = "^1.17.0"
flake8 = "^7.3.0"
pytest = "^8.4.1"
isort = "^6.0.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["tests"]
disable_error_code = ["name-defined"]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
#extend-ignore = E501
